--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx;harmony=true" src="scripts/tutorial1.js"></script>
+    <script type="text/jsx;harmony=true" src="scripts/playing.js"></script>
   </body>
 </html>
